<resources>
    <string name="app_name">MCModules</string>

    <string name="nombreS">NOMBRE: </string>
    <string name="edadS">EDAD: </string>
    <string name="sexoS">SEXO: </string>
    <string name="sexo">Sexo </string>
    <string name="sexo2">Sexo: </string>
    <string name="clave_de_elector">CLAVE DE ELECTOR: </string>
    <string name="curp">CURP:</string>
    <string name="curp2">CURP </string>
    <string name="seccion">SECCION: </string>
    <string name="emision">EMISION: </string>
    <string name="vigencia">VIGENCIA: </string>
    <string name="localidad">LOCALIDAD: </string>
    <string name="colonia2">COLONIA: </string>
    <string name="frente">Frente</string>
    <string name="ValidarINE">Validar INE</string>
    <string name="domicilio">DOMICILIO:</string>
    <string name="escaneo_de_informaci_n_ine">Escaneo de información INE</string>
    <string name="escaneo_de_informaci_n_ine_reverso">Escaneo de información INE</string>
    <string name="captura_de_info_ine">captura de info ine</string>
    <string name="en_progreso">En progreso…</string>
    <string name="escaneo_listo">"Escaneo Listo (Verifica la información)"</string>
    <string name="es_correcto">¡Es correcto!</string>
    <string name="verificar_informaci_n_con_ine">Verificar información con INE</string>
    <string name="info_local">Info. Local</string>
    <string name="campos">Campos</string>
    <string name="info_ine">Info. INE</string>
    <string name="nombre">Nombre</string>
    <string name="validar_datos">Validar Datos</string>
    <string name="init_scan">Iniciar Escaneo</string>
    <string name="domicilio2">Domicilio</string>
    <string name="estado3">Estado</string>
    <string name="nunicipio3">Municipio</string>
    <string name="rfc2">RFC</string>

    <string name="cic">CIC:</string>
    <string name="identificador_c">IDENTIFICADOR CIUDADANO:</string>
    <string name="fecha_nac">Fecha de nacimiento:</string>

    <string name="estado2">ESTADO:</string>
    <string name="tipo_ine">Tipo INE:</string>
    <string name="ocr">OCR:</string>
    <string name="codigo_qr">CODIGO QR:</string>
    <string name="codeini">codeini</string>

    <string name="municipio2">DELEGACIÓN O MUNICIPIO:</string>
    <string name="emisi_n">EMISIÓN</string>
    <string name="clave">CLAVE</string>
    <string name="captura">Captura</string>
    <string name="establecer">Establecer</string>
    <string name="paso_actual">Paso actual</string>
    <string name="contentdescription">contentDescription</string>
    <string name="datos_solicitante">Datos solicitante</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_s">Nombre(s):</string>
    <string name="apellido_paterno">Apellido Paterno:</string>
    <string name="apellido_materno">Apellido Materno:</string>
    <string name="estado_civil">Estado Civil:</string>
    <string name="curp3">CURP:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="siguiente"><![CDATA[Siguiente ->]]></string>
    <string name="anterior"><![CDATA[<- Anterior]]></string>
    <string name="calle">Calle:</string>
    <string name="no_interior">No. Interior:</string>
    <string name="no_exterior">No. Exterior:</string>
    <string name="c_digo_postal">Código Postal:</string>
    <string name="tel_fono_celular">Teléfono Celular:</string>
    <string name="colonia">Colonia:</string>
    <string name="municipio">Municipio:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="estado">Estado:</string>
    <string name="autorizacion_y_consultas">Terminos y Condiciones y Autorización de Consultas</string>
    <string name="acepto_condiciones">
        <Data><![CDATA[Acepto <font color=\'#0000FF\'><u>Términos y Condiciones</u></font> y cláusula de medios electrónicos tales como NIP]]> </Data>
    </string>


    <string name="text1_aceptocondiciones">
        <Data><![CDATA[Autorización para solicitar Reportes de Crédito]]> </Data>
    </string>

    <string name="text2_aceptocondiciones">
         <Data><![CDATA[Autorizo expresamente a (<font color=\'#0000FF\'>Alternativa Sur</font>), para que lleve acabo investigaciones sobre mi comportamiento Crediticio en las Sociedades de  Información Crediticia (SIC) que estime conveniente.
        Conozco la naturaleza y alcance de la información que se solicitará, del uso que se le dará y que se prodrán realizar consultas periódicas de mi historial crediticio.]]> </Data>
    </string>

    <string name="text3_aceptocondiciones">
          <Data><![CDATA[Consiento que esta autorización tenga un a vigencia de 3 años contados a partir de hoy, y en su caso mientras mantengamos relación jurídica.Acepto que este documento quede bajo propiedad de (<font color=\'#0000FF\'>Alternativa Sur</font>) para efectos de control y cumplimiento del artículo 28 de la LRSIC.]]> </Data>
    </string>
    <string name="autorizo">Autorizo</string>
    <string name="ingreso_de_nip">Ingreso de NIP:</string>
    <string name="todo">TODO</string>
    <string name="titulo">Titulo</string>
    <string name="cancelar">CANCELAR</string>
    <string name="visitar">VISITAR</string>
    <string name="validar_nip">Validar NIP</string>

    <string name="ok">Listo</string>
    <string name="clear">Limpiar</string>
    <string name="cancel">Cancelar</string>
    <string name="enter_signature">Ingresa la firma</string>
    <string name="aceptar_firma">Aceptar Firma</string>
    <string name="vigencia2">VIGENCIA:</string>
    <string name="color_actual">Color actual</string>
    <string name="item">ITEM</string>
    <string name="terminar">Terminar</string>
    <string name="cic_descripcion">CIC:</string>
    <string name="identificador_ciudadano_desc">Identificador ciudadano:</string>

    <!-- ACT LOGCAT -->
    <string name="logcat">Logcat</string>
    <string name="description_logcat">A continuación, encontrarás una lista con los diferentes eventos registrados por la aplicación, incluyendo errores, consultas y respuestas al servidor.</string>
    <string name="logcat_type">Tipo</string>
    <string name="logcat_date">Fecha</string>
    <string name="logcat_description">Descripción</string>

    <!-- PERMISSIONS -->
    <string name="default_dinamic_permisssions_title">Permisos Del Sistema</string>
    <string name="default_dinamic_permisssions_description">"¡Espera un momento!\n Antes de continuar, permítenos asegurarnos de que todo funcione sin problemas. El sistema necesita estos permisos para funcionar correctamente</string>
    <string name="button_permission">Aceptar</string>
    <string name="button_next">Continuar</string>
    <string name="button_start">Comenzar</string>
    <string name="label_success">Tu permiso se ha concedido con éxito.\n ¡Estas listo para seguir adelante!</string>
    <string name="title_resume_permissions">Resumen de permisos</string>
    <string name="button_finish">Finalizar</string>
    <string name="description_resume_permissions">En la siguiente lista, encontrarás los permisos que necesitamos para que la aplicación funcione correctamente. Por favor, asegúrate de aceptar todos estos permisos para poder continuar utilizando la aplicación sin problemas.</string>

    <!-- Huellas dactilares -->
    <string name="escaneo_de_huellas_dactilares">Escaneo de huellas dactilares</string>
    <string name="escanea_las_huellas_dactilares_de_los_dedos_indice_de_tus_dos_manos">Escanea las huellas dactilares de los dedos índice de tus dos manos.</string>
    <string name="huella_dedo_ndice_derecho">Huella dedo índice derecho.</string>
    <string name="huella_dedo_ndice_izquierdo">Huella dedo índice izquierdo.</string>
    <string name="estatus3">Estatus:</string>
    <string name="no_capturada">No capturada</string>
    <string name="calidad">Calidad:</string>
    <string name="guion">-</string>
    <string name="comenzar_escaneo">Comenzar escaneo</string>
    <string name="escanear_huellas_dactilares">Escanear Huellas</string>
    <string name="capturada">Capturada</string>
    <string name="capturar">Capturar</string>
    <string name="finalizar_captura">Finalizar captura</string>

</resources>