<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@color/transparente">

    <LinearLayout
        android:id="@+id/linearUp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/transparente"
        android:orientation="horizontal" />

    <RelativeLayout
        android:id="@+id/relativeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearUp"
        android:background="@drawable/back_redondeado">

        <CheckBox
            android:id="@+id/selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/todo"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_up"
            app:tint="@color/colorAccent"
            android:contentDescription="@string/contentdescription" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/colorAccent"
            android:contentDescription="@string/contentdescription" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/colorTitle"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorText" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:adjustViewBounds="true"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeInfo"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/view"
        android:layout_centerInParent="true"
        android:background="@drawable/back_redondeado_bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back_alert"
            android:gravity="center"
            android:text="@string/cancelar"
            android:textColor="@color/colorAccent" />

        <View
            android:id="@+id/viewVertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back_alert"
            android:gravity="center"
            android:text="@string/visitar"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <ImageView
        android:id="@+id/circleView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/circle_alert"
        android:padding="10dp"
        app:tint="@color/white"
        android:contentDescription="@string/contentdescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:theme="@style/CircularProgress"
        android:visibility="gone" />

</RelativeLayout>
